--- a/index.html
+++ b/index.html
@@ -151,15 +151,14 @@
 									<h3>Ngày ăn hỏi</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>4:00 PM</span>
-										<span>6:00 PM</span>
+										<span>8:00 AM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
+										<span>Saturday 13</span>
+										<span>May, 2023</span>
 									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Địa điểm tổ chức: Thôn Tây Nha, Xã Tiến Đức, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
@@ -167,15 +166,14 @@
 									<h3>Ngày cưới</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>7:00 PM</span>
 										<span>12:00 AM</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
+										<span>Sunday 14</span>
+										<span>May, 2023</span>
 									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Địa điểm tổ chức: Thôn Lường, Xã Hoà Tiến, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
 								</div>
 							</div>
 						</div>
@@ -189,7 +187,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Lịch trình diễn trong ngày cưới của tụi mình.</span>
+					<span>Lịch trình sự kiện diễn ra trong ngày cưới của tụi mình.</span>
 					<h2>Event schedule</h2>
 				</div>
 			</div>
@@ -197,38 +195,38 @@
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline animate-box">
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/pts/LEO04570.JPG);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">First We Meet</h3>
-									<span class="date">December 25, 2015</span>
+									<h3 class="timeline-title">Lễ Ăn Hỏi</h3>
+									<span class="date">Thứ 7, Ngày 13 Tháng 5 Năm 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Địa chỉ: Thôn Tây Nha, Xã Tiến Đức, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
 								</div>
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/pts/LEO04636.JPG);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">First Date</h3>
-									<span class="date">December 28, 2015</span>
+									<h3 class="timeline-title">Lễ Vu Quy</h3>
+									<span class="date">Chủ nhật, Ngày 14 Tháng 5 Năm 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Địa chỉ: Thôn Lường, Xã Hoà Tiến, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
 								</div>
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/LEO04805.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">In A Relationship</h3>
-									<span class="date">January 1, 2016</span>
+									<h3 class="timeline-title">Lễ Thành Hôn</h3>
+									<span class="date">Chủ nhật, Ngày 14 Tháng 5 Năm 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Địa chỉ: Thôn Tây Nha, Xã Tiến Đức, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
 								</div>
 							</div>
 						</li>
@@ -262,7 +260,7 @@
 							style="background-image: url(images/pts/LEO03339.JPG); ">
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn"
-							style="background-image: url(images/pts/LEO04519.JPG); ">
+							style="background-image: url(images/pts/LEO04493.JPG); ">
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn"
 							style="background-image: url(images/pts/LEO03200.JPG); ">
@@ -309,7 +307,7 @@
 							<i class="icon-image"></i>
 						</span>
 						<div class="feature-copy">
-							<h3> <a href="https://drive.google.com/drive/folders/15QNS4nWKy64u_IibgUcPnpqZB9vY0_zK?usp=share_link" target="_blank">Photoshoot</a> </h3>
+							<h3> <a href="https://drive.google.com/drive/folders/1mRKyFwqPkAEH9fv3QX-l8GrQ07KM4I1c?usp=share_link" target="_blank">Photoshoot</a> </h3>
 							<p>Nếu bạn muốn xem thêm ảnh thì có thể click vào chữ "Photoshoot" bên trên nha. </p>
 						</div>
 					</div>
@@ -328,7 +326,7 @@
 
 				<div class="col-md-6 animate-box">
 					<div class="fh5co-video fh5co-bg" style="background-image: url(images/LEO04378.jpg); ">
-						<a href="https://www.youtube.com/watch?v=EQGjDrBDMkY" class="popup-vimeo"><i class="icon-video2"></i></a>
+						<a href="https://www.youtube.com/watch?v=EQGjDrBDMkY"><i class="icon-video2"></i></a>
 						<div class="overlay"></div>
 					</div>
 				</div>
@@ -345,7 +343,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Thank you!</h2>
-					<p>Bọn mình rất muốn được chụp chung với bạn những tấm hình kỷ niệm vì vậy hãy đến sớm hơn một chút bạn yêu nhé!</p>
+					<p>Bọn mình rất muốn được chụp chung với bạn những tấm hình kỷ niệm vì vậy hãy đến sớm hơn một chút bạn yêu nhé. Nhớ đến nha!!!</p>
 				</div>
 			</div>
 		</div>
@@ -357,7 +355,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">Bật mí một chút là: thiệp online này do chồng mình đòi tự làm nên trông cũng không đẹp bằng các chỗ khác đâu. Các bạn thông cảm nha.</small>
+						<small class="block">Mở bằng máy tính sẽ đẹp hơn đó nha!!!</small>
 					</p>
 				</div>
 			</div>
